--- a/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
@@ -154,8 +154,13 @@
             <ComboBox Grid.Row="2" Grid.Column="1"
                       Margin="0,5,5,0" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding AvailableSpokeLacingPatterns}"
-                      PlaceholderText="3"
-                      SelectedValue="{Binding SelectedSpokeLacingPattern}" />
+                      SelectedValue="{Binding SelectedSpokeLacingPattern}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Label}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </Grid>
 
     </StackPanel>
