--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -68,161 +68,47 @@
         </Grid>
 
         <!--  Calculation Status  -->
-        <ContentControl HorizontalAlignment="Stretch" Content="{Binding CurrentState}">
-            <ContentControl.DataTemplates>
-                <DataTemplate DataType="enums:ECalculatorState">
-                    <ContentControl Content="{Binding}">
-                        <ContentControl.Styles>
-
-                            <Style Selector="ContentControl[Content=NotStarted]">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <StackPanel Grid.Column="0"
-                                                        Margin="0,20,0,25"
-                                                        Orientation="Vertical">
-                                                <materialIcons:MaterialIcon Width="25" Height="25"
-                                                                            HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                            Foreground="{DynamicResource SemiColorTertiary}"
-                                                                            Kind="AccountQuestionOutline" />
-                                                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                           Text="{x:Static res:Languages.EnterValues}" />
-                                                <TextBlock Margin="0,15,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                           Foreground="{DynamicResource SemiColorWarning}"
-                                                           Text="{Binding $parent[UserControl].DataContext.CalculatorInputErrors}"
-                                                           TextWrapping="Wrap" />
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-
-                            <Style Selector="ContentControl[Content=InProgress]">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <StackPanel Grid.Column="0"
-                                                        Margin="0,20,0,25"
-                                                        Orientation="Vertical">
-                                                <materialIcons:MaterialIcon Width="25" Height="25"
-                                                                            HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                            Foreground="{DynamicResource SemiColorInformation}"
-                                                                            Kind="TimerSand" />
-                                                <TextBlock Grid.Row="1"
-                                                           HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                           Text="{x:Static res:Languages.CalculationInProgress}" />
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-
-                            <Style Selector="ContentControl[Content=Computed]">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
-                                                <StackPanel Grid.Column="0"
-                                                            Margin="0,20,0,25"
-                                                            Orientation="Vertical">
-                                                    <materialIcons:MaterialIcon Width="25" Height="25"
-                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                                Foreground="{DynamicResource SemiColorSuccess}"
-                                                                                Kind="CheckBold" />
-                                                    <TextBlock Grid.Row="1"
-                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                               Text="{x:Static res:Languages.Calculated}" />
-                                                </StackPanel>
-
-                                                <TextBlock Grid.Row="1"
-                                                           Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                                           FontSize="12" FontWeight="SemiBold"
-                                                           Foreground="{DynamicResource SemiColorTertiary}"
-                                                           Text="{x:Static res:Languages.RecommendedValue}" />
-                                                <Border Grid.Row="2"
-                                                        HorizontalAlignment="Stretch"
-                                                        Background="{DynamicResource SemiColorTertiaryLight}"
-                                                        CornerRadius="7">
-                                                    <Grid Margin="10,10"
-                                                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-                                                        <TextBlock Grid.Row="0" Grid.Column="0"
-                                                                   Margin="0,0,10,0" VerticalAlignment="Center"
-                                                                   FontWeight="DemiBold"
-                                                                   Foreground="{DynamicResource SemiColorText0}"
-                                                                   Text="{x:Static res:Languages.ChainLengthLabel}" />
-                                                        <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
-                                                                                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                                                                                  FontWeight="Bold"
-                                                                                  Foreground="{DynamicResource SemiColorSuccess}"
-                                                                                  Format="0.00"
-                                                                                  Value="{Binding $parent[UserControl].DataContext.RecommendedChainLength}" />
-                                                        <TextBlock Grid.Row="1" Grid.Column="0"
-                                                                   Margin="0,10,10,0"
-                                                                   FontWeight="DemiBold"
-                                                                   Foreground="{DynamicResource SemiColorText0}"
-                                                                   Text="{x:Static res:Languages.ChainLinksLabel}" />
-                                                        <TextBlock Grid.Row="1" Grid.Column="1"
-                                                                   Margin="0,10,0,0" HorizontalAlignment="Left"
-                                                                   FontWeight="Bold"
-                                                                   Foreground="{DynamicResource SemiColorSuccess}"
-                                                                   Text="{Binding $parent[UserControl].DataContext.RecommendedChainLinks}" />
-                                                    </Grid>
-                                                </Border>
-                                            </Grid>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-
-                            <Style Selector="ContentControl[Content=Failed]">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
-                                                <StackPanel Grid.Column="0"
-                                                            Margin="0,20,0,25"
-                                                            Orientation="Vertical">
-                                                    <materialIcons:MaterialIcon Width="25" Height="25"
-                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                                Foreground="{DynamicResource SemiColorDanger}"
-                                                                                Kind="ErrorOutline" />
-                                                    <TextBlock Grid.Row="1"
-                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                               Text="{x:Static res:Languages.CalculationFailed}" />
-                                                </StackPanel>
-                                            </Grid>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-
-                            <Style Selector="ContentControl[Content=Unknown]">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
-                                                <StackPanel Grid.Column="0"
-                                                            Margin="0,20,0,25"
-                                                            Orientation="Vertical">
-                                                    <materialIcons:MaterialIcon Width="25" Height="25"
-                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                                Foreground="{DynamicResource SemiColorWarning}"
-                                                                                Kind="CloseCircleOutline" />
-                                                    <TextBlock Grid.Row="1"
-                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                               Text="{x:Static res:Languages.SomethingWentWrong}" />
-                                                </StackPanel>
-                                            </Grid>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-
-                        </ContentControl.Styles>
-                    </ContentControl>
-                </DataTemplate>
-            </ContentControl.DataTemplates>
-        </ContentControl>
+        <controls:CalculatorStateControl HorizontalAlignment="Stretch"
+                                         State="{Binding CurrentState}"
+                                         ErrorMessage="{Binding CalculatorInputErrors}">
+            <controls:CalculatorStateControl.ComputedContent>
+                <!-- Custom content for ChainLength calculator results -->
+                <StackPanel>
+                    <TextBlock Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
+                               FontSize="12" FontWeight="SemiBold"
+                               Foreground="{DynamicResource SemiColorTertiary}"
+                               Text="{x:Static res:Languages.RecommendedValue}" />
+                    <Border HorizontalAlignment="Stretch"
+                            Background="{DynamicResource SemiColorTertiaryLight}"
+                            CornerRadius="7">
+                        <Grid Margin="10,10"
+                              ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                            <TextBlock Grid.Row="0" Grid.Column="0"
+                                       Margin="0,0,10,0" VerticalAlignment="Center"
+                                       FontWeight="DemiBold"
+                                       Foreground="{DynamicResource SemiColorText0}"
+                                       Text="{x:Static res:Languages.ChainLengthLabel}" />
+                            <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
+                                                      HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                      FontWeight="Bold"
+                                                      Foreground="{DynamicResource SemiColorSuccess}"
+                                                      Format="0.00"
+                                                      Value="{Binding RecommendedChainLength}" />
+                            <TextBlock Grid.Row="1" Grid.Column="0"
+                                       Margin="0,10,10,0"
+                                       FontWeight="DemiBold"
+                                       Foreground="{DynamicResource SemiColorText0}"
+                                       Text="{x:Static res:Languages.ChainLinksLabel}" />
+                            <TextBlock Grid.Row="1" Grid.Column="1"
+                                       Margin="0,10,0,0" HorizontalAlignment="Left"
+                                       FontWeight="Bold"
+                                       Foreground="{DynamicResource SemiColorSuccess}"
+                                       Text="{Binding RecommendedChainLinks}" />
+                        </Grid>
+                    </Border>
+                </StackPanel>
+            </controls:CalculatorStateControl.ComputedContent>
+        </controls:CalculatorStateControl>
 
     </StackPanel>
 </UserControl>
